deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: https-demo
  template:
    metadata:
      labels:
        app: https-demo
    spec:
      containers:
      - name: https-demo
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
