service.yml
apiVersion: v1
kind: Service
metadata:
  name: https-demo-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: https-demo
