ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "https-demo/my-certs"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - localhost
      secretName: my-certs
  rules:
  - host: localhost
    http:
      paths:
      - path: /httpstest
        pathType: Prefix
        backend:
          service:
            name: https-demo-svc
            port:
              number: 80
